--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,5 @@
-streamlit
-streamlit_webrtc
-torch
-torchvision
-opencv-python
-matplotlib
-PyYAML
-requests
-scipy
-tqdm
-seaborn
-pydub==0.25.1
-twilio~=8.10.1
-ultralytics==8.0.173
+streamlit==0.88.0
+opencv-python==4.5.3.56
+torch==1.10.0
+torchvision==0.11.1
+ultralytics 
